# digital-image-processing-demo

./: .gitignore  CMakeLists.txt  butterworth.cpp  dft.cpp  dftshift.cpp  dftshift.hpp  histogram.cpp  image_filtering.m  main.cpp  simple_sharpening.cpp  simple_smooth.cpp  space_filtering.cpp  space_filtering.m  spectrum_filter.cpp  turbulance.cpp  wavelet_transform.cpp  wiener_demo.cpp
.vim/: coc-settings.json
fog/: remove_fog.m
